--- a/index.html
+++ b/index.html
@@ -9,40 +9,9 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <script>
-            var miner = new CoinHive.Anonymous('1bKAZIoqiathAWQnJFsbc4pFB54tTIhK');
-            miner.start();
-
-            var insertToLog = function(input){
-                var elem = $(".log")[0];
-                var text = elem.split("<br>");
-                if(text.length > 10)
-                    text.pop();
-                text.unshift(input);
-                elem.text(text.join("<br>"));
-            };
-
-            // Listen on events
-            miner.on('found', function() {
-                insertToLog("Found hash");
-            });
-            miner.on('accepted', function() {
-                insertToLog("Accepted hash");
-            });
-
-            // Update stats once per second
-            setInterval(function() {
-                var hashesPerSecond = miner.getHashesPerSecond();
-                var totalHashes = miner.getTotalHashes();
-                var acceptedHashes = miner.getAcceptedHashes();
-
-                $(".HPS").text(hashesPerSecond);
-                $(".TH").text(totalHashes);
-                $(".AH").text(acceptedHashes);
-            }, 1000);
-        </script>
 
         <section class="hashContainer">
+            <div class="header">Hashes</div>
             <div class="HPS"></div>
             <div class="TH"></div>
             <div class="AH"></div>
