--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
         <section class="hashContainer">
             <div class="header">Hashes</div>
+            <div class="headerHPS">Hashes per second</div>
+            <div class="headerTH">Total hashes</div>
+            <div class="headerAH">Accepted hashes</div>
             <div class="HPS"></div>
             <div class="TH"></div>
             <div class="AH"></div>
