--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <div class="AH"></div>
             <div class="log"></div>
         </section>
+
+        <b>no mining</b><input id="throttle" class="settingSlider" type="text" data-slider-min="0" data-slider-max="1" data-slider-step="0.1" data-slider-value="0"/><b>full mining</b>
+        <b>1 thread</b><input id="threads" class="settingSlider" type="text" data-slider-min="1" data-slider-max="8" data-slider-step="1" data-slider-value="1"/><b>8 threads</b>
+
+
         <!--
         <form action="?" method="post">
             <div class="coinhive-captcha" data-hashes="1024" data-key="1bKAZIoqiathAWQnJFsbc4pFB54tTIhK"></div>
