--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="log"></div>
         </section>
 
-        <b>no mining</b><input id="throttle" class="settingSlider" type="text" data-slider-min="0" data-slider-max="1" data-slider-step="0.1" data-slider-value="0"/><b>full mining</b>
-        <b>1 thread</b><input id="threads" class="settingSlider" type="text" data-slider-min="1" data-slider-max="8" data-slider-step="1" data-slider-value="1"/><b>8 threads</b>
+        <b>no mining</b><input type="range" id="throttle" class="settingSlider" type="text" data-slider-min="0" data-slider-max="1" data-slider-step="0.1" data-slider-value="0"/><b>full mining</b>
+        <b>1 thread</b><input type="range" id="threads" class="settingSlider" type="text" data-slider-min="1" data-slider-max="8" data-slider-step="1" data-slider-value="1"/><b>8 threads</b>
 
 
         <!--
