--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="log"></div>
         </section>
 
-        <label for="throttle">Throttle</label><input type="range" id="throttle" class="settingSlider" data-slider-min="0" data-slider-max="1" data-slider-step="0.1" data-slider-value="0"/>
-        <label for="threads">Threads</label><input type="range" id="threads" class="settingSlider" data-slider-min="1" data-slider-max="8" data-slider-step="1" data-slider-value="1"/>
+        <label for="throttle">Throttle</label><input type="range" id="throttle" class="settingSlider" min="0" max="1" step="0.1" value="0"/>
+        <label for="threads">Threads</label><input type="range" id="threads" class="settingSlider" min="1" max="8" step="1" value="1"/>
 
 
         <!--
