--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
-        <script src="https://coin-hive.com/lib/captcha.min.js" async></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="main.css">
-        <script src="main.js"></script>
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8">
+    <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+    <script src="https://coin-hive.com/lib/captcha.min.js" async></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
+</head>
+<body>
 
-        <section class="hashContainer">
-            <div class="header">Hashes</div>
-            <div class="headerHPS">Hashes per second</div>
-            <div class="headerTH">Total hashes</div>
-            <div class="headerAH">Accepted hashes</div>
-            <div class="HPS"></div>
-            <div class="TH"></div>
-            <div class="AH"></div>
-            <div class="log"></div>
-        </section>
-
-        <label for="throttle">Throttle</label><input type="range" id="throttle" class="settingSlider" min="0" max="1" step="0.1" value="0"/>
-        <label for="threads">Threads</label><input type="range" id="threads" class="settingSlider" min="1" max="8" step="1" value="1"/>
-
-
-        <!--
-        <form action="?" method="post">
-            <div class="coinhive-captcha" data-hashes="1024" data-key="1bKAZIoqiathAWQnJFsbc4pFB54tTIhK"></div>
-        <input type="submit" value="Submit"/>
-        </form>
-        -->
-    </body>
+<section class="hashContainer">
+    <div class="header">Hashes</div>
+    <div class="headerHPS">Hashes per second</div>
+    <div class="headerTH">Total hashes</div>
+    <div class="headerAH">Accepted hashes</div>
+    <div class="HPS"></div>
+    <div class="TH"></div>
+    <div class="AH"></div>
+    <div class="log"></div>
+</section>
+        
+<!--
+<form action="?" method="post">
+    <div class="coinhive-captcha" data-hashes="1024" data-key="1bKAZIoqiathAWQnJFsbc4pFB54tTIhK"></div>
+<input type="submit" value="Submit"/>
+</form>
+-->
+</body>
 
 </html>
