--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 <section class="hashContainer">
     <div class="header">Hashes</div>
-    <div class="headerHPS">Hashes per second</div>
-    <div class="headerTH">Total hashes</div>
-    <div class="headerAH">Accepted hashes</div>
+    <div class="headerSec">Hashes per sec</div>
+    <div class="headerMin">Hashes per min</div>
+    <div class="headerHour">Hashes per hour</div>
     <div class="HPS"></div>
     <div class="TH"></div>
     <div class="AH"></div>
     <div class="log"></div>
 </section>
-        
+
 <!--
 <form action="?" method="post">
     <div class="coinhive-captcha" data-hashes="1024" data-key="1bKAZIoqiathAWQnJFsbc4pFB54tTIhK"></div>
