--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="headerSec">Hashes per sec</div>
     <div class="headerMin">Hashes per min</div>
     <div class="headerHour">Hashes per hour</div>
-    <div class="HPS"></div>
-    <div class="TH"></div>
-    <div class="AH"></div>
+    <div class="lastSec"></div>
+    <div class="lastMin"></div>
+    <div class="lastHour"></div>
     <div class="log"></div>
 </section>
 
