--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <section class="hashContainer">
     <div class="header">Hashes</div>
+    <div class="headerSec"></div>
     <div class="headerMin">Hashes per sec</div>
     <div class="headerHour">Hashes per min</div>
     <div class="headerDay">Hashes per hour</div>
