--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<section class="hashContainer">
+<div class="hashContainer">
     <div class="header">Hashes</div>
     <div class="headerSec"></div>
     <div class="headerMin">Hashes per sec</div>
@@ -20,7 +20,7 @@
     <div class="lastSec"></div>
     <div class="lastMin"></div>
     <div class="lastHour"></div>
-</section>
+</div>
 
 <!--
 <form action="?" method="post">
