--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <div class="hashContainer">
     <div class="header">Hashes</div>
-    <div class="headerSec"></div>
+    <div class="lastSec"></div>
     <div class="headerMin">Hashes per sec</div>
     <div class="headerHour">Hashes per min</div>
     <div class="headerDay">Hashes per hour</div>
-    <div class="lastSec"></div>
     <div class="lastMin"></div>
     <div class="lastHour"></div>
+    <div class="lastDay"></div>
 </div>
 
 <!--
