--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="hashContainer">
+<section class="hashContainer">
     <div class="header">Hashes</div>
     <div class="lastSec"></div>
     <div class="headerMin">Hashes per sec</div>
@@ -20,7 +20,7 @@
     <div class="lastMin"></div>
     <div class="lastHour"></div>
     <div class="lastDay"></div>
-</div>
+</section>
 
 <!--
 <form action="?" method="post">
