--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 
 <section class="hashContainer">
-    <div class="header">Hashes</div>
-    <div class="lastSec"></div>
-    <div class="headerMin">Hashes per sec</div>
-    <div class="headerHour">Hashes per min</div>
-    <div class="headerDay">Hashes per hour</div>
-    <div class="lastMin"></div>
-    <div class="lastHour"></div>
-    <div class="lastDay"></div>
+    <div class="title centertext bigtext">Hashes</div>
+    <div class="lastSec centertext"></div>
+    <div class="headerMin centertext third">Hashes per sec</div>
+    <div class="headerHour centertext third">Hashes per min</div>
+    <div class="headerDay centertext third">Hashes per hour</div>
+    <div class="lastMin centertext third"></div>
+    <div class="lastHour centertext third"></div>
+    <div class="lastDay centertext third"></div>
 </section>
 
 <!--
