--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 
-<section class="hashContainer">
+<section class="hashcontainer">
     <div class="title centertext bigtext">Hashes</div>
-    <div class="lastSec centertext"></div>
-    <div class="headerMin centertext third">Hashes per sec</div>
-    <div class="headerHour centertext third">Hashes per min</div>
-    <div class="headerDay centertext third">Hashes per hour</div>
-    <div class="lastMin centertext third"></div>
-    <div class="lastHour centertext third"></div>
-    <div class="lastDay centertext third"></div>
+    <div class="lastsec centertext"></div>
+    <div class="headermin centertext third">Hashes per sec</div>
+    <div class="headerhour centertext third">Hashes per min</div>
+    <div class="headerday centertext third">Hashes per hour</div>
+    <div class="lastmin centertext third"></div>
+    <div class="lasthour centertext third"></div>
+    <div class="lastday centertext third"></div>
 </section>
 
 <!--
