--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 
 <section class="hashcontainer">
-    <div class="title centertext bigtext">Hashes</div>
-    <div class="lastsec centertext"></div>
-    <div class="headermin centertext third">Hashes per sec</div>
-    <div class="headerhour centertext third">Hashes per min</div>
-    <div class="headerday centertext third">Hashes per hour</div>
-    <div class="lastmin centertext third"></div>
-    <div class="lasthour centertext third"></div>
-    <div class="lastday centertext third"></div>
+    <div class="title centertext griditem bigtext">Hashes</div>
+    <div class="lastsec centertext griditem"></div>
+    <div class="headermin centertext griditem third">Hashes per sec</div>
+    <div class="headerhour centertext griditem third">Hashes per min</div>
+    <div class="headerday centertext griditem third">Hashes per hour</div>
+    <div class="lastmin centertext griditem third"></div>
+    <div class="lasthour centertext griditem third"></div>
+    <div class="lastday centertext griditem third"></div>
 </section>
 
 <!--
