--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <section class="hashcontainer">
     <div class="title centertext griditem bigtext">Hashes</div>
-    <div class="lastsec centertext griditem"></div>
-    <div class="headermin centertext griditem third">Hashes per sec</div>
-    <div class="headerhour centertext griditem third">Hashes per min</div>
-    <div class="headerday centertext griditem third">Hashes per hour</div>
-    <div class="lastmin centertext griditem third"></div>
-    <div class="lasthour centertext griditem third"></div>
-    <div class="lastday centertext griditem third"></div>
+    <div class="nsec centertext griditem"></div>
+    <div class="tmin centertext griditem third">Hashes per sec</div>
+    <div class="thour centertext griditem third">Hashes per min</div>
+    <div class="tday centertext griditem third">Hashes per hour</div>
+    <div class="nmin centertext griditem third"></div>
+    <div class="nhour centertext griditem third"></div>
+    <div class="nday centertext griditem third"></div>
 </section>
 
 <!--
