--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <section class="hashcontainer">
     <div class="title centertext griditem bigtext">Hashes</div>
     <div class="nsec centertext griditem"></div>
-    <div class="tmin centertext griditem third">Hashes per sec</div>
-    <div class="thour centertext griditem third">Hashes per min</div>
-    <div class="tday centertext griditem third">Hashes per hour</div>
-    <div class="nmin centertext griditem third"></div>
-    <div class="nhour centertext griditem third"></div>
-    <div class="nday centertext griditem third"></div>
+    <div class="tmin centertext griditem">Hashes per sec</div>
+    <div class="thour centertext griditem">Hashes per min</div>
+    <div class="tday centertext griditem">Hashes per hour</div>
+    <div class="nmin centertext griditem"></div>
+    <div class="nhour centertext griditem"></div>
+    <div class="nday centertext griditem"></div>
 </section>
 
 <!--
