--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <section class="hashcontainer">
     <div class="title centertext griditem bigtext">Hashes</div>
     <div class="nsec centertext griditem"></div>
-    <div class="tmin centertext griditem">Hashes per sec</div>
-    <div class="thour centertext griditem">Hashes per min</div>
-    <div class="tday centertext griditem">Hashes per hour</div>
+    <div class="tmin centertext griditem">Hashes per min</div>
+    <div class="thour centertext griditem">Hashes per hour</div>
+    <div class="tday centertext griditem">Hashes per day</div>
     <div class="nmin centertext griditem"></div>
     <div class="nhour centertext griditem"></div>
     <div class="nday centertext griditem"></div>
