--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 
 <section class="hashcontainer">
-    <div class="title centertext griditem bigtext">Hashes</div>
-    <div class="nsec centertext griditem"></div>
-    <div class="tmin centertext griditem">Hashes per min</div>
-    <div class="thour centertext griditem">Hashes per hour</div>
-    <div class="tday centertext griditem">Hashes per day</div>
-    <div class="nmin centertext griditem"></div>
-    <div class="nhour centertext griditem"></div>
-    <div class="nday centertext griditem"></div>
+    <h1 class="title centertext">Hashes</h1>
+    <h3 class="nsec centertext"></h3>
+    <h2 class="tmin centertext">Hashes per min</h2>
+    <h2 class="thour centertext">Hashes per hour</h2>
+    <h2 class="tday centertext">Hashes per day</h2>
+    <h3 class="nmin centertext"></h3>
+    <h3 class="nhour centertext"></h3>
+    <h3 class="nday centertext"></h3>
 </section>
 
 <!--
