--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <section class="hashcontainer">
     <h1 class="title centertext">Hashes</h1>
     <h3 class="nsec centertext"></h3>
-    <h2 class="tmin centertext">Hashes per min</h2>
-    <h2 class="thour centertext">Hashes per hour</h2>
-    <h2 class="tday centertext">Hashes per day</h2>
+    <h2 class="tmin centertext">Miners</h2>
+    <h2 class="thour centertext">Throttle</h2>
+    <h2 class="tday centertext">Threads</h2>
     <h3 class="nmin centertext"></h3>
     <h3 class="nhour centertext"></h3>
     <h3 class="nday centertext"></h3>
